[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_module"

[project]
name = "asterdex-mcp"
version = "0.1.0"
description = "MCP server for AsterDex perpetual futures market data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AsterDex MCP Team" }
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.scripts]
asterdex-mcp = "asterdex_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
